--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
   <nav>
-    <a class="btn" href="#login.html">Login page</a>
+    <a class="btn" href="login.html">Login page</a>
   </nav>
 </body>
 </html>
